--- a/index.html
+++ b/index.html
@@ -28,8 +28,13 @@
 			</div> <!-- end col -->
 		</div> <!-- end row -->
 		<div class="row h-100 justify-content-center align-items-center">
-			<div class="col-xs-12 random-button">
-				<button>SPIN AGAIN</button>
+			<div class="col-xs-12 random-box">
+				<button class="random-button">SPIN AGAIN</button>
+			</div> <!-- end col -->
+		</div> <!-- end row -->
+		<div class="row h-100 justify-content-center align-items-center">
+			<div class="col-xs-12 close-box">
+				<button class="close-button">CLOSE</button>
 			</div> <!-- end col -->
 		</div> <!-- end row -->		
 		<div class="row h-100 justify-content-center align-items-center">
